--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Obrigado por tudo que faz por mim!</h2>
     <img
       class="flower"
-      src="/gifs/5KTO.gif"
+      src="gifs/5KTO.gif"
       alt="gif"
       width="450px"
       height="450px"
@@ -18,21 +18,21 @@
     <aside>
       <img
         class="formatura"
-        src="/gifs/2.jpg"
+        src="gifs/2.jpg"
         alt="img"
         width="500px"
         height="500px"
       />
       <img
         class="natureza"
-        src="/gifs/4.jpg"
+        src="gifs/4.jpg"
         alt="img"
         width="500px"
         height="500px"
       />
       <img
         class="rua"
-        src="/gifs/55.jpg"
+        src="gifs/55.jpg"
         alt="img"
         width="500px"
         height="500px"
